--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 const chat = document.getElementById("chat");
 const eye = document.getElementById("eye");
 
-// Your API Key
-const OPENAI_API_KEY = ""; // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-// WPROWADŹ SWÓJ KLUCZ API OPENAI
+// ===============================
+// WPROWADŹ SWÓJ KLUCZ API W CUDZYSŁOWIE
+// ===============================
+const OPENAI_API_KEY = "YOUR_OPENAI_KEY_HERE";
+// ===============================
 
 function addMessage(who, text) {
     const p = document.createElement("div");
@@ -117,7 +119,7 @@ if ("webkitSpeechRecognition" in window) {
         eye.classList.remove("active");
     };
 
-    recognition.onerror = (e) => {
+    recognition.onerror = () => {
         addMessage("duo", "Microphone error. Please check permissions.");
         listening = false;
         eye.classList.remove("active");
@@ -134,57 +136,3 @@ if ("webkitSpeechRecognition" in window) {
 
 // Text-to-Speech
 function speak(text) {
-    const msg = new SpeechSynthesisUtterance(text);
-    msg.lang = "en-US";
-    speechSynthesis.speak(msg);
-}
-
-// Send request to OpenAI
-async function askDuokid(userText) {
-    addMessage("duo", "Thinking…");
-
-    try {
-        const response = await fetch("https://api.openai.com/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "Authorization": "Bearer " + OPENAI_API_KEY
-            },
-            body: JSON.stringify({
-                model: "gpt-4o-mini",
-                messages: [
-                    { role: "system", content: "You are DuoKid — a friendly children’s voice assistant." },
-                    { role: "user", content: userText }
-                ]
-            })
-        });
-
-        const data = await response.json();
-        const reply = data.choices?.[0]?.message?.content || "I cannot respond right now.";
-
-        addMessage("duo", reply);
-        speak(reply);
-
-    } catch (err) {
-        addMessage("duo", "Connection error.");
-    }
-}
-
-// Eye tap → start/stop listening
-eye.addEventListener("click", () => {
-    if (!OPENAI_API_KEY) {
-        alert("Please add your OpenAI API Key in the code first!");
-        return;
-    }
-    if (!recognition) return;
-
-    if (!listening) {
-        recognition.start();
-    } else {
-        recognition.stop();
-    }
-});
-</script>
-
-</body>
-</html>
