--- a/index.html
+++ b/index.html
@@ -1,107 +1,351 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>DuoKid</title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+
 <style>
     body {
         margin: 0;
-        font-family: Arial, sans-serif;
-        background: radial-gradient(circle at center, #001533, #000a1a);
-        color: white;
-        text-align: center;
+        font-family: "Nunito", sans-serif;
+        background: linear-gradient(180deg, #dce8ff, #f5f9ff);
+        display: flex;
+        justify-content: center;
+        padding: 25px;
+        transition: background 0.5s ease;
+    }
+
+    body.dark {
+        background: linear-gradient(180deg, #1d2238, #2a2f46);
     }
 
     .container {
-        margin: 40px auto;
-        max-width: 450px;
-        padding: 20px;
-        background: white;
-        color: black;
-        border-radius: 20px;
-        box-shadow: 0 0 40px rgba(120, 80, 255, 0.6);
+        width: 100%;
+        max-width: 520px;
+        background: #ffffffee;
+        backdrop-filter: blur(8px);
+        padding: 25px;
+        border-radius: 22px;
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+        transition: 0.5s ease;
+    }
+    body.dark .container {
+        background: #2f3550ee;
+        color: #eee;
     }
 
+    .top-row {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 14px;
+        margin-bottom: 10px;
+    }
+
+    /* OKO */
     #eye {
-        width: 160px;
-        height: 160px;
-        margin: 0 auto 20px;
+        width: 190px;
+        height: 190px;
         border-radius: 50%;
-        background: radial-gradient(circle, #ffffff, #a88bff, #6a40ff);
-        box-shadow: 0 0 40px rgba(140, 80, 255, 0.7);
         cursor: pointer;
-        transition: 0.25s;
+        background: radial-gradient(circle at 45% 35%, #ffffff, #ccbaff, #9d88ff);
+        box-shadow: 0 0 25px rgba(150, 120, 255, 0.45);
+        animation: breathe 4s ease-in-out infinite;
+        position: relative;
+        overflow: hidden;
+        transition: 0.35s;
     }
 
-    #eye.active {
-        box-shadow: 0 0 60px rgba(0, 255, 140, 1);
+    /* Mruganie */
+    #eye::after {
+        content: "";
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: #fff;
+        border-radius: 50%;
+        transform: scaleY(0);
+        transform-origin: top;
+        opacity: 0.8;
+        animation: blink 7s infinite;
+    }
+
+    @keyframes blink {
+        0%, 96%, 100% { transform: scaleY(0); }
+        97%, 99%      { transform: scaleY(1); }
+    }
+
+    @keyframes breathe {
+        0%   { transform: scale(1); }
+        50%  { transform: scale(1.06); }
+        100% { transform: scale(1); }
+    }
+
+    /* Duszek – mały przyjaciel */
+    #ghost {
+        width: 60px;
+        height: 60px;
+        border-radius: 50% 50% 40% 40%;
+        background: #ffeef5;
+        box-shadow: 0 6px 12px rgba(255, 170, 200, 0.6);
+        position: relative;
+        animation: floaty 3s ease-in-out infinite;
+    }
+
+    #ghost::before,
+    #ghost::after {
+        content: "";
+        position: absolute;
+        top: 18px;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background: #ff82a6;
+    }
+
+    #ghost::before { left: 15px; }
+    #ghost::after  { right: 15px; }
+
+    @keyframes floaty {
+        0%, 100% { transform: translateY(0); }
+        50%      { transform: translateY(-6px); }
+    }
+
+    /* Nasłuchiwanie */
+    #eye.listening {
+        animation: listening 1.6s ease-in-out infinite;
+        background: radial-gradient(circle, #eafff1, #b8ffd4, #6affaa);
+    }
+
+    @keyframes listening {
+        0%   { box-shadow: 0 0 25px rgba(80, 255, 170, 0.5); }
+        50%  { box-shadow: 0 0 45px rgba(80, 255, 170, 1); }
+        100% { box-shadow: 0 0 25px rgba(80, 255, 170, 0.5); }
+    }
+
+    /* Myślenie */
+    #eye.thinking {
+        animation: thinking 2.2s linear infinite;
+    }
+
+    @keyframes thinking {
+        0%   { filter: hue-rotate(0deg); }
+        100% { filter: hue-rotate(360deg); }
+    }
+
+    #title {
+        text-align: center;
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 10px;
     }
 
     #chat {
-        background: #e9eefc;
+        background: #eef3ff;
         padding: 15px;
         border-radius: 15px;
-        height: 260px;
+        height: 280px;
         overflow-y: auto;
-        text-align: left;
         font-size: 16px;
+        margin-bottom: 10px;
+    }
+    body.dark #chat {
+        background: #3b4265;
     }
 
-    .duo { color: #0047ff; margin-bottom: 10px; }
-    .you { color: #008a2e; margin-bottom: 10px; }
+    .duo, .you {
+        margin-bottom: 8px;
+        display: flex;
+        align-items: flex-start;
+        gap: 6px;
+    }
+
+    .bubble {
+        padding: 8px 12px;
+        border-radius: 14px;
+        max-width: 90%;
+    }
+
+    .duo-label, .you-label {
+        font-size: 12px;
+        opacity: 0.7;
+        min-width: 42px;
+    }
+
+    .duo .bubble {
+        background: #d9e0ff;
+        color: #222;
+        font-weight: 600;
+    }
+
+    .you .bubble {
+        background: #c9f4dd;
+        color: #19422b;
+        font-weight: 600;
+    }
+
+    #hint {
+        text-align: center;
+        font-size: 15px;
+        color: #666;
+        margin-top: 6px;
+    }
+
+    #repeatBtn {
+        display: inline-block;
+        margin: 8px auto 0;
+        background: #7d8dff;
+        padding: 8px 16px;
+        border-radius: 12px;
+        color: white;
+        cursor: pointer;
+        text-align: center;
+        font-weight: 700;
+        width: 150px;
+        font-size: 14px;
+    }
+
+    #repeatBtn:active {
+        transform: scale(0.95);
+    }
+
+    #toggleDark {
+        text-align: center;
+        margin-top: 10px;
+        font-weight: 700;
+        cursor: pointer;
+        opacity: 0.8;
+        font-size: 14px;
+    }
 </style>
 </head>
 
 <body>
 
 <div class="container">
-    <div id="eye"></div>
-    <h1>DUOKID</h1>
+    <div class="top-row">
+        <div id="ghost"></div>
+        <div id="eye"></div>
+    </div>
+
+    <div id="title">DuoKid</div>
+
     <div id="chat"></div>
-    <p>Tap the eye and speak to DuoKid.</p>
+
+    <div id="repeatBtn">Powtórz głos</div>
+
+    <div id="hint">Dotknij oka i porozmawiaj z DuoKid.</div>
+
+    <div id="toggleDark">Tryb nocny</div>
 </div>
 
 <script>
-const eye = document.getElementById("eye");
 const chat = document.getElementById("chat");
+const eye = document.getElementById("eye");
+const repeatBtn = document.getElementById("repeatBtn");
+const toggleDark = document.getElementById("toggleDark");
 
-function addMessage(who, text) {
-    const div = document.createElement("div");
-    div.className = who;
-    div.textContent = (who === "duo" ? "DuoKid: " : "You: ") + text;
-    chat.appendChild(div);
-    chat.scrollTop = chat.scrollHeight;
+let lastReply = "";
+let recognition;
+let listening = false;
+
+/* ------ DŹWIĘKI START/STOP (proste beep'y) ------ */
+const startBeep = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=");
+const stopBeep  = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=");
+
+/* ------ HISTORIA ROZMÓW (localStorage) ------ */
+function saveHistory() {
+    const lines = [];
+    chat.querySelectorAll(".duo, .you").forEach(node => {
+        lines.push({
+            who: node.classList.contains("duo") ? "duo" : "you",
+            text: node.querySelector(".bubble").textContent.replace(/^DuoKid: /, "").replace(/^Ty: /, "")
+        });
+    });
+    localStorage.setItem("duokid_history", JSON.stringify(lines.slice(-30)));
 }
 
-// Powitanie
-addMessage("duo", "Hi! I'm DuoKid. Tap my eye and talk to me.");
+function loadHistory() {
+    const raw = localStorage.getItem("duokid_history");
+    if (!raw) return;
+    try {
+        const lines = JSON.parse(raw);
+        lines.forEach(line => {
+            addMessage(line.who, line.text, false);
+        });
+    } catch {}
+}
 
-// Rozpoznawanie mowy (Chrome / Edge / Android)
-let listening = false;
-let recognition = null;
+/* ------ UI CHAT ------ */
+function addMessage(who, text, save = true) {
+    const row = document.createElement("div");
+    row.className = who;
 
+    const label = document.createElement("div");
+    label.className = who === "duo" ? "duo-label" : "you-label";
+    label.textContent = who === "duo" ? "DuoKid" : "Ty";
+
+    const bubble = document.createElement("div");
+    bubble.className = "bubble";
+    bubble.textContent = (who === "duo" ? "" : "") + text;
+
+    row.appendChild(label);
+    row.appendChild(bubble);
+    chat.appendChild(row);
+    chat.scrollTop = chat.scrollHeight;
+
+    if (save) saveHistory();
+}
+
+function speak(text) {
+    const msg = new SpeechSynthesisUtterance(text);
+    msg.lang = "pl-PL";
+    msg.rate = 1;
+    msg.pitch = 1.1;
+    speechSynthesis.speak(msg);
+}
+
+/* ------ POWITANIE ------ */
+loadHistory();
+
+if (!localStorage.getItem("duokid_welcomed")) {
+    setTimeout(() => {
+        const welcome = "Cześć! Jestem DuoKid. Fajnie, że tu jesteś!";
+        addMessage("duo", welcome);
+        speak(welcome);
+        localStorage.setItem("duokid_welcomed", "1");
+    }, 600);
+}
+
+addMessage("duo", "Dotknij mojego oka i porozmawiaj ze mną.", false);
+
+/* ------ ROZPOZNAWANIE MOWY ------ */
 if ("webkitSpeechRecognition" in window) {
     recognition = new webkitSpeechRecognition();
-    recognition.lang = "en-US";
+    recognition.lang = "pl-PL";
     recognition.continuous = false;
     recognition.interimResults = false;
 
     recognition.onstart = () => {
         listening = true;
-        eye.classList.add("active");
+        eye.classList.add("listening");
+        try { startBeep.play(); } catch {}
     };
 
     recognition.onend = () => {
         listening = false;
-        eye.classList.remove("active");
+        eye.classList.remove("listening");
+        try { stopBeep.play(); } catch {}
     };
 
     recognition.onerror = () => {
-        addMessage("duo", "Microphone error. Please check permissions.");
+        addMessage("duo", "Ups! Mikrofon nie działa. Sprawdź uprawnienia.");
         listening = false;
-        eye.classList.remove("active");
+        eye.classList.remove("listening");
     };
 
     recognition.onresult = async (event) => {
@@ -110,46 +354,48 @@ if ("webkitSpeechRecognition" in window) {
         await askDuokid(text);
     };
 } else {
-    addMessage("duo", "Your browser does not support voice input.");
+    addMessage("duo", "Twoja przeglądarka nie obsługuje rozpoznawania mowy.");
 }
 
-function speak(text) {
-    const msg = new SpeechSynthesisUtterance(text);
-    msg.lang = "en-US";
-    speechSynthesis.speak(msg);
-}
-
-async function askDuokid(text) {
-    addMessage("duo", "Thinking...");
+/* ------ POŁĄCZENIE Z BACKENDEM ------ */
+async function askDuokid(userText) {
+    eye.classList.add("thinking");
+    addMessage("duo", "Myślę...", true);
 
     try {
         const res = await fetch("/api/duokid", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ message: text })
+            body: JSON.stringify({ userText })
         });
 
         const data = await res.json();
-        const reply = data.reply || "I cannot respond right now.";
+        const reply = data.reply || "Nie wiem, co powiedzieć.";
+        lastReply = reply;
 
         addMessage("duo", reply);
         speak(reply);
-
-    } catch (err) {
-        addMessage("duo", "Error connecting to server.");
+    } catch (e) {
+        addMessage("duo", "Błąd połączenia z serwerem.");
     }
+
+    eye.classList.remove("thinking");
 }
 
+/* ------ ZDARZENIA ------ */
 eye.addEventListener("click", () => {
-    if (!recognition) {
-        alert("Speech recognition not supported in this browser.");
-        return;
-    }
-    if (!listening) {
-        recognition.start();
-    } else {
-        recognition.stop();
-    }
+    if (!recognition) return;
+    if (!listening) recognition.start();
+    else recognition.stop();
+});
+
+repeatBtn.addEventListener("click", () => {
+    if (lastReply) speak(lastReply);
+});
+
+/* Tryb nocny */
+toggleDark.addEventListener("click", () => {
+    document.body.classList.toggle("dark");
 });
 </script>
 
