--- a/index.html
+++ b/index.html
@@ -1,79 +1,66 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DuoKid</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DuoKid</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #cfe7ff, #cde2ff);
+      text-align: center;
+    }
 
-    <style>
-        body {
-            margin: 0;
-            font-family: "Arial", sans-serif;
-            background: linear-gradient(to bottom, #cfe7ff, #d7e9ff);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-        }
+    .hero-img {
+      width: 260px;
+      margin-top: 20px;
+    }
 
-        h1 {
-            margin-top: 10px;
-            font-size: 42px;
-            color: #333;
-            font-weight: 700;
-        }
+    h1 {
+      font-size: 3rem;
+      margin-top: 5px;
+      color: #444;
+    }
 
-        .hero-img {
-            width: 240px;
-            height: auto;
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
+    .chat-box {
+      width: 90%;
+      max-width: 600px;
+      background: white;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+      min-height: 200px;
+      font-size: 1.3rem;
+      color: #5a5a5a;
+    }
 
-        .chat-box {
-            width: 90%;
-            max-width: 600px;
-            background: white;
-            padding: 25px;
-            border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-            margin-top: 20px;
-        }
-
-        .btn {
-            background: #6a7dff;
-            color: white;
-            font-size: 22px;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 40px;
-            margin-top: 25px;
-            cursor: pointer;
-            box-shadow: 0 8px 25px rgba(100, 120, 255, 0.5);
-            transition: 0.2s;
-        }
-
-        .btn:hover {
-            transform: scale(1.05);
-            background: #8090ff;
-        }
-    </style>
+    .btn {
+      margin-top: 20px;
+      padding: 15px 40px;
+      font-size: 1.4rem;
+      background: #647cff;
+      color: white;
+      border: none;
+      border-radius: 40px;
+      box-shadow: 0px 5px 15px rgba(100, 124, 255, 0.4);
+    }
+  </style>
 </head>
+
 <body>
 
-    <!-- OBRAZEK DUOKID -->
-    <img src="duokid.jpeg" alt="DuoKid" class="hero-img" />
+  <img src="duokid.jpeg" alt="DuoKid" class="hero-img">
 
-    <h1>DuoKid</h1>
+  <h1>DuoKid</h1>
 
-    <div class="chat-box">
-        <p style="font-size: 20px; color: #555;">
-            Dotknij mnie i porozmawiaj ze mną.
-        </p>
-    </div>
+  <div class="chat-box">
+    Dotknij mnie i porozmawiaj ze mną.
+  </div>
 
-    <button class="btn">Porozmawiaj</button>
+  <button class="btn">Porozmawiaj</button>
 
 </body>
 </html>
