--- a/index.html
+++ b/index.html
@@ -1,66 +1,116 @@
-<!DOCTYPE html>
-<html lang="pl">
+<!DOCTYPE html><html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DuoKid</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Duokid – Głos + Tekst</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #cfe7ff, #cde2ff);
-      text-align: center;
-    }
-
-    .hero-img {
-      width: 260px;
-      margin-top: 20px;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-top: 5px;
-      color: #444;
-    }
-
-    .chat-box {
-      width: 90%;
-      max-width: 600px;
-      background: white;
-      margin: 20px auto;
+      margin: 0;
       padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
-      min-height: 200px;
-      font-size: 1.3rem;
-      color: #5a5a5a;
+      background: #f3f3f3;
     }
-
-    .btn {
-      margin-top: 20px;
-      padding: 15px 40px;
-      font-size: 1.4rem;
-      background: #647cff;
-      color: white;
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 600px;
+      margin: 40px auto;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .speak-btn {
+      margin-top: 15px;
+      padding: 10px 16px;
+      font-size: 16px;
+      cursor: pointer;
       border: none;
-      border-radius: 40px;
-      box-shadow: 0px 5px 15px rgba(100, 124, 255, 0.4);
+      border-radius: 8px;
+      background: #007bff;
+      color: #fff;
+    }
+  .cute-eye {
+      width: 120px;
+      height: 120px;
+      background: #ffffff;
+      border-radius: 50%;
+      border: 6px solid #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 20px rgba(0,0,0,0.15), inset 0 -10px 20px rgba(0,0,0,0.1);
+    }
+    .cute-pupil {
+      width: 40px;
+      height: 40px;
+      background: #000;
+      border-radius: 50%;
+      position: relative;
+      animation: cuteLook 3s infinite ease-in-out;
+    }
+    .cute-pupil::after {
+      content: "";
+      position: absolute;
+      top: 6px;
+      left: 6px;
+      width: 12px;
+      height: 12px;
+      background: #fff;
+      border-radius: 50%;
+    }
+    @keyframes cuteLook {
+      0% { transform: translate(0, 0); }
+      20% { transform: translate(10px, -4px); }
+      40% { transform: translate(-6px, 6px); }
+      60% { transform: translate(8px, 4px); }
+      80% { transform: translate(-4px, -6px); }
+      100% { transform: translate(0, 0); }
     }
   </style>
 </head>
-
 <body>
-
-  <img src="duokid.jpeg" alt="DuoKid" class="hero-img">
-
-  <h1>DuoKid</h1>
-
-  <div class="chat-box">
-    Dotknij mnie i porozmawiaj ze mną.
-  </div>
-
-  <button class="btn">Porozmawiaj</button>
-
-</body>
+  <div class="card">
+    <h1>Witaj w Duokid!</h1>
+    <p id="text">
+      To jest przykładowy komunikat. Duokid mówi i pokazuje tekst jednocześnie.
+    </p>
+    <button class="speak-btn" onclick="speakText()">Odtwórz głos</button>
+  </div>  <script>
+    function speakText() {
+      const text = document.getElementById('text').innerText;
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = 'pl-PL';
+      window.speechSynthesis.speak(utterance);
+    }
+  </script>  <style>
+    .eye {
+      width: 40px;
+      height: 40px;
+      background: #000;
+      border-radius: 50%;
+      position: relative;
+      margin: 20px auto;
+      overflow: hidden;
+    }
+    .pupil {
+      width: 16px;
+      height: 16px;
+      background: #fff;
+      border-radius: 50%;
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      animation: look 3s infinite ease-in-out;
+    }
+    @keyframes look {
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(8px, 0); }
+      50% { transform: translate(8px, 8px); }
+      75% { transform: translate(0, 8px); }
+      100% { transform: translate(0, 0); }
+    }
+  </style>  <div class="eye cute-eye"><div class="pupil cute-pupil"></div></div></div></body>
 </html>
