--- a/index.html
+++ b/index.html
@@ -1,116 +1,97 @@
-<!DOCTYPE html><html lang="pl">
+<!-- index.html --><!DOCTYPE html><html lang="pl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Duokid – Głos + Tekst</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background: #f3f3f3;
-    }
-    .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 600px;
-      margin: 40px auto;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .speak-btn {
-      margin-top: 15px;
-      padding: 10px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 8px;
-      background: #007bff;
-      color: #fff;
-    }
-  .cute-eye {
-      width: 120px;
-      height: 120px;
-      background: #ffffff;
-      border-radius: 50%;
-      border: 6px solid #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      box-shadow: 0 0 20px rgba(0,0,0,0.15), inset 0 -10px 20px rgba(0,0,0,0.1);
-    }
-    .cute-pupil {
-      width: 40px;
-      height: 40px;
-      background: #000;
-      border-radius: 50%;
-      position: relative;
-      animation: cuteLook 3s infinite ease-in-out;
-    }
-    .cute-pupil::after {
-      content: "";
-      position: absolute;
-      top: 6px;
-      left: 6px;
-      width: 12px;
-      height: 12px;
-      background: #fff;
-      border-radius: 50%;
-    }
-    @keyframes cuteLook {
-      0% { transform: translate(0, 0); }
-      20% { transform: translate(10px, -4px); }
-      40% { transform: translate(-6px, 6px); }
-      60% { transform: translate(8px, 4px); }
-      80% { transform: translate(-4px, -6px); }
-      100% { transform: translate(0, 0); }
-    }
-  </style>
+  <title>DuoKid – Oko</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="card">
-    <h1>Witaj w Duokid!</h1>
-    <p id="text">
-      To jest przykładowy komunikat. Duokid mówi i pokazuje tekst jednocześnie.
-    </p>
-    <button class="speak-btn" onclick="speakText()">Odtwórz głos</button>
-  </div>  <script>
-    function speakText() {
-      const text = document.getElementById('text').innerText;
-      const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'pl-PL';
-      window.speechSynthesis.speak(utterance);
-    }
-  </script>  <style>
-    .eye {
-      width: 40px;
-      height: 40px;
-      background: #000;
-      border-radius: 50%;
-      position: relative;
-      margin: 20px auto;
-      overflow: hidden;
-    }
-    .pupil {
-      width: 16px;
-      height: 16px;
-      background: #fff;
-      border-radius: 50%;
-      position: absolute;
-      top: 12px;
-      left: 12px;
-      animation: look 3s infinite ease-in-out;
-    }
-    @keyframes look {
-      0% { transform: translate(0, 0); }
-      25% { transform: translate(8px, 0); }
-      50% { transform: translate(8px, 8px); }
-      75% { transform: translate(0, 8px); }
-      100% { transform: translate(0, 0); }
-    }
-  </style>  <div class="eye cute-eye"><div class="pupil cute-pupil"></div></div></div></body>
-</html>
+  <div id="eye-wrapper">
+    <div class="eye">
+      <div class="pupil"></div>
+      <div class="eyelid"></div>
+    </div>
+  </div><button id="talk-btn">Porozmawiaj</button>
+
+  <script src="script.js"></script></body>
+</html><!-- style.css --><style>
+  body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(#cfe7ff, #d5edff);
+    font-family: Arial, sans-serif;
+  }
+
+  #eye-wrapper {
+    position: relative;
+    width: 200px;
+    height: 200px;
+  }
+
+  .eye {
+    width: 200px;
+    height: 200px;
+    background: white;
+    border-radius: 50%;
+    border: 8px solid #000;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: inset 0 -20px 30px rgba(0,0,0,0.1), 0 0 25px rgba(0,0,0,0.15);
+    animation: blink 6s infinite;
+  }
+
+  .pupil {
+    width: 60px;
+    height: 60px;
+    background: #000;
+    border-radius: 50%;
+    position: relative;
+    animation: look-around 4s infinite ease-in-out;
+  }
+
+  .pupil::after {
+    content: "";
+    width: 18px;
+    height: 18px;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 8px;
+    left: 8px;
+  }
+
+  .eyelid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #cfe7ff;
+    border-radius: 50%;
+    transform-origin: top;
+    transform: scaleY(0);
+    animation: eyelid-blink 6s infinite;
+    pointer-events: none;
+  }
+
+  @keyframes look-around {
+    0% { transform: translate(0,0); }
+    25% { transform: translate(20px, -10px); }
+    50% { transform: translate(-15px, 10px); }
+    75% { transform: translate(10px, 5px); }
+    100% { transform: translate(0,0); }
+  }
+
+  @keyframes blink {
+    0%, 90%, 100% { transform: scaleY(1); }
+    92% { transform: scaleY(0.1); }
+  }
+
+  @keyframes eyelid-bl
